<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="8"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/gasolinaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/txtGasolina"
        android:textColor="@android:color/background_dark" />

    <SeekBar
        android:id="@+id/gasolinaSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="800"
        android:progress="400" />

    <TextView
        android:id="@+id/valorGasolinaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"

        android:text="@string/valorGasolinainit" />

    <TextView
        android:id="@+id/etanolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/txtEtanol"
        android:textColor="@android:color/background_dark" />

    <SeekBar
        android:id="@+id/etanolSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:max="800"
        android:progress="400" />

    <TextView
        android:id="@+id/valorEtanolTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/valorEtanolinit" />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/txtResultado"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/valorResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/valorResultado"
        android:textColor="@android:color/background_dark" />

    <ImageView
        android:id="@+id/resultadoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        />
</GridLayout>